<resources>
    <string name="app_name">Xpenso</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_settings">Profile</string>
    <string name="title_add_expenses">Add Expenses</string>
    <string name="title_detail">Detailed Information</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="splash">Welcome to Xpenso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_transactions">No Transactions Found!</string>


    //SignIn/SignUp
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_Up">Sign Up</string>
    <string name="go_to_signin">Already a User? Sign In</string>
    <string name="go_to_signup">New User? Sign Up</string>


    //HomeFrag
    <string name="balance">Balance</string>
    <string name="income">Income</string>
    <string name="expenditure">Expenses</string>

    //AddExpense
    <string name="withdrawer">Entity</string>
    <string name="amount">Amount</string>
    <string name="cash">Cash</string>
    <string name="online">Online Payment</string>
    <string name="desc">Description</string>
    <string name="add_transac">Add Transaction</string>

    //DetailFrag
    <string name="paid_detail">Entity : </string>
    <string name="desc_detail">Description : </string>
    <string name="time_detail">Time : </string>
    <string name="payment_mode_detail">Payment Mode : </string>
    <string name="transaction_type_detail">Transaction Type : </string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="appwidget_text">EXAMPLE</string>


    //Widget
    <string name="add_widget">Add widget</string>
    <string name="empty_text_widget">Click here to open Xpenso</string>
    <string name="widget_title">Your Recent Transactions</string>

    //SharedPrefs
    <string name="pref_transaction_list_key">pref_transaction_list</string>

    //Accessibility
    <string name="cd_progress">Circular Progressbar</string>
    <string name="cd_indicator">Income/Expense Indicator</string>

    //SettingsFragment
    <string name="logout">Logout</string>
    <string name="greetings">Hello, </string>

    //IncomeFragment
    <string name="greeting">Greetings!</string>
    <string name="set_user">Please Enter a Username : </string>
    <string name="set_income">Please enter your monthly income : </string>
    <string name="getting_started">Let\'s get started!</string>
    <string name="manage_expenses">Let\'s manage Xpenses!</string>

    //ValidationStrings
    <string name="enter_valid_username">Please enter a Valid Username</string>
    <string name="enter_valid_amount">Please enter an amount more than 0</string>
    <string name="enter_valid_entity">Please fill in entity!</string>

    //AuthStrings
    <string name="auth_success">Authentication Success</string>
    <string name="auth_failed">Authentication Failed!</string>
    <string name="auth_google_failed">Google Authentication Failed!</string>

    //Record
    <string name="go_record">Go, Record Your Expenses!</string>


</resources>
